Java 25, actually